<resources>
    <string name="app_name">MyProgress</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="Dont_have">Dont have account, create</string>
    <string name="Register">Registration</string>
    <string name="empty_name">empty name</string>
    <string name="empty_email">empty email</string>
    <string name="not_valid_email">not valid email</string>
    <string name="not_valid_password">not valid password</string>
    <string name="empty_email_or_password">email or password is empty</string>
    <string name="requirementsy">does not meet the requirementsy</string>
    <string name="autorithation">Autorithation error, login or password not true</string>
    <string name="successfully">successfully logged in</string>
    <string name="verify">please verify your account on email</string>
    <string name="sent">password sent to your email</string>
    <string name="valid">"not valid data</string>
    <string name="password_empty">password empty</string>
    <string name="password_not_valid">password not valid</string>
    <string name="check">please check email</string>
    <string name="password_requirements">Password requirements:</string>
    <string name="requirements">1)At least 8 chars\n2)Digit must occur at least once\n3)A lower case letter must occur at least once\n4)An upper case letter must occur at least once\n5)No whitespace allowed in the entire string</string>
    <string name="sent_pass">Send my Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="not_valid_name">not valid name</string>
    <string name="last_name">Last name</string>
    <string name="registration">REGISTER NOW</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="benefit">What a benefit to me in developing this area?</string>
    <string name="add_task">Add task?</string>
    <string name="select_date">SELECT DATE END</string>
    <string name="detail_task">Detail Task</string>
    <string name="type_exercize">Type exercise</string>
    <string name="description">Description</string>
    <string name="progress">Progress</string>
    <string name="date_create">Date create</string>
    <string name="intent">Intent</string>
    <string name="exercize_fail">EXERCISE FAIL</string>
    <string name="change_photo">CHANGE PHOTO</string>
    <string name="delete_progress">Delete Progress?</string>
    <string name="seriosly">You seriosly?</string>


    <string name="all">ALL</string>
    <string name="complete">COMPLETE</string>
    <string name="process">IN PROCESS</string>





</resources>
