<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fragments_registration.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green1"
            android:text="@string/Register"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="300dp"
            android:imeOptions="actionDone"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/edit_text_email"
            android:hint="@string/Name"/>


        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="300dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/edit_text_password"
            android:hint="@string/last_name"/>


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="300dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/Password"/>


        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="300dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>







        <Button
            android:id="@+id/button_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/green2"
            android:textColor="@color/colorWhite"
            android:text="@string/registration"
            android:textAllCaps="false" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />



</RelativeLayout>