<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_profile.AddProgressFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/header_add_progress"
        android:text="@string/benefit"
        android:gravity="center"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/edit_progress_name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/Name"
        android:textSize="15sp"
        android:layout_below="@+id/header_add_progress"
        tools:ignore="TextFields"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:id="@+id/ok"
        android:text="@string/ok"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:gravity="center"/>
    </RelativeLayout>

</RelativeLayout>