<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_registration.SignInFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/main_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/colorTransparent"
            android:src="@drawable/main_auth"
            android:id="@+id/imageView"
            android:layout_marginTop="40dp"/>
    </LinearLayout>


    <EditText

        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/Email"
        android:textSize="15sp"/>


    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_email"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:id="@+id/et_password" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/button_layout"
        android:orientation="vertical">




        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/green2"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="200dp"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/btn_registration"
            android:layout_width="150dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/green2"
            android:text="@string/Dont_have" />



        <TextView
                 android:id="@+id/btn_forgot_password"
                 android:layout_width="150dp"
                 android:layout_marginTop="20dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:textColor="@color/green2"
                 android:text="@string/forgot"/>


    </LinearLayout>

</RelativeLayout>