<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_profile.AddTaskFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:padding="10dp">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/header_detail_task"
            android:text="@string/detail_task"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/container_type_task"
            android:layout_below="@+id/header_detail_task"
            android:gravity="center">

            <TextView
                android:id="@+id/type_task_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/colorAccent"
                android:hint="@string/type_exercize"
                android:gravity="center"
                android:textSize="15sp"/>


            <ImageView
                android:id="@+id/type_task_icon"
                android:layout_width="30dp"
                android:layout_above="@+id/type_task_name"
                android:layout_height="30dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/icon_type_3" />

        </LinearLayout>



        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_centerHorizontal="true"
            android:hint="@string/Name"
            android:textSize="15sp"
            android:layout_below="@+id/container_type_task"
            tools:ignore="TextFields"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_description"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_centerHorizontal="true"
            android:hint="@string/description"
            android:textSize="15sp"
            android:layout_below="@+id/edit_text_name"
            tools:ignore="TextFields"/>


        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_date_end"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:hint="Date END"
            android:textSize="15sp"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_below="@+id/edit_text_description"
            tools:ignore="TextFields"/>


        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_progress"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_centerHorizontal="true"
            android:hint="@string/progress"
            android:textSize="15sp"
            android:layout_below="@+id/edit_text_date_end"
            tools:ignore="TextFields"/>



        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_date_create"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_centerHorizontal="true"
            android:hint="@string/date_create"
            android:textSize="15sp"
            android:layout_below="@+id/edit_text_progress"
            tools:ignore="TextFields"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/container_fail"
            android:layout_below="@+id/edit_text_date_create"
            android:gravity="center">

            <ImageButton

                android:id="@+id/state"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/galochka_green40" />



            <ImageButton
                android:id="@+id/fail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/krest_grey_40"
                android:background="@color/colorTransparent"
                android:text="@string/exercize_fail"/>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:id="@+id/ok"
            android:text="@string/ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>
