<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_profile.ProfileFragment">


    <FrameLayout
        android:id="@+id/frameLayout_user_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/photo_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_user" />

    </FrameLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/level"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="30dp"
                android:layout_marginRight="20dp"
                android:text="10" />


            <TextView
                android:id="@+id/next_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="next level 10240 point" />
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/Name" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView_LastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/last_name" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:text="@string/Email" />
        </TableRow>



    </TableLayout>


    <Button
        android:id="@+id/change_photo"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="308dp"
        android:background="@color/green2"
        android:text="@string/change_photo"
        android:textColor="@color/colorWhite"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/progress"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />


    <ImageButton
        android:id="@+id/add_progress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="352dp"
        android:background="@drawable/oval"
        android:scaleType="center"
        android:src="@drawable/plusi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>