<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_profile.AddTaskFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/text_add_task"
            android:text="Add task?"
            android:gravity="center"/>


        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text_add_task"/>



        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_name"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/Name"
            android:textSize="15sp"
            android:layout_below="@+id/spinner_type"
            tools:ignore="TextFields"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/edit_text_description"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:hint="Description"
            android:textSize="15sp"
            android:layout_below="@+id/edit_text_name"
            tools:ignore="TextFields"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:id="@+id/container_date"
    android:layout_below="@+id/edit_text_description"
    android:gravity="center">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textColor="@color/colorAccent"
            android:hint="@string/select_date"
            android:gravity="center"
            android:textSize="15sp"/>


        <ImageButton
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_above="@+id/tvDate"
            android:layout_height="30dp"
            android:background="@color/colorTransparent"
            android:src="@drawable/calendar" />

</LinearLayout>



        <com.project.myprogress.customview.MultiSelectionSpinner
            android:id="@+id/multiselection_spinner_progress"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_below="@+id/container_date"/>


       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:id="@+id/ok"
            android:text="@string/ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>